--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,13 @@
   ],
   "homepage": "https://github.com/maddoger/yii2-cms-app/",
   "type": "project",
-  "minimum-stability": "dev",
   "require": {
     "php": ">=5.4.0",
-    "yiisoft/yii2": "2.0.*",
+    "yiisoft/yii2": "~2.0",
     "yiisoft/yii2-swiftmailer": "*",
-    "maddoger/yii2-cms-core": "dev-master",
-    "maddoger/yii2-cms-admin": "dev-master",
-    "maddoger/yii2-cms-user": "dev-master"
+    "maddoger/yii2-cms-core": "*",
+    "maddoger/yii2-cms-admin": "*",
+    "maddoger/yii2-cms-user": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "*",
@@ -30,24 +29,6 @@
       "bower-asset-library": "vendor/bower"
     }
   },
-
-
   "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@github.com:maddoger/yii2-cms-core.git"
-    },
-    {
-      "type": "vcs",
-      "url": "git@github.com:maddoger/yii2-cms-admin.git"
-    },
-    {
-      "type": "vcs",
-      "url": "git@github.com:maddoger/yii2-cms-user.git"
-    },
-    {
-      "type": "vcs",
-      "url": "git@github.com:maddoger/yii2-highcharts.git"
-    }
   ]
 }
